--- a/CACashMachine/CACashMachine/CACashMachine.csproj
+++ b/CACashMachine/CACashMachine/CACashMachine.csproj
@@ -42,8 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminUser.cs" />
+    <Compile Include="BankAction.cs" />
+    <Compile Include="CashMachine.cs" />
+    <Compile Include="IUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleUser.cs" />
+    <Compile Include="UserStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
